<resources>
    <string name="app_name">MACRO_1</string>

    <string name="country_prompt">Choose a country</string>

    <string name="add" translatable="false">ADD NEW ITEM</string>
    <string name="update" translatable="false">UPDATE</string>
    <string name="remove" translatable="false">REMOVE</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="des1" translatable="false">Intel Core i7-8550U 8th Gen processor. 8GB DDR4 RAM. 1TB. 15.6-inch screen, Nvidia GeForce 940MX 4GB Graphics</string>
    <string name="des2" translatable="false">Form Factor M.2, Size - 250GB. Operating Temperature 0°C ~ 70°C</string>

    <string-array name="type_arrays">
        <item>Laptop</item>
        <item>Mouse and Keyboad</item>
        <item>Monitor</item>
        <item>Computer Parts</item>
        <item>Desktop Computer</item>
        <item>External Storage</item>
    </string-array>


    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
